# automate-timelines

./: .env.example  .gitignore  README.md  config.example.py  main.py  narrative_trailer.py  pyproject.toml  requirements.txt
ai_examples/: 0.2-structured-ouput-gemini.py  load-api-checks.py
ai_prompts/: 2_NOTUSED_story_arch.py  __init__.py  cleanup_1.py  cliffhanger_finder_5.py  emotions_finder_4.py  hook_finder_2.py  life_lesson_finder_3.py  narrative_together_6.py  prompts.py
archive/: build_2_video_audio_timelines_claude.py  build_2_video_audio_timelines_gpt.py
create_timelines/: build_simple_timeline.py  timeline_config_example.json
data/: clips-gemini-2.5flash.json
data/ai_selected_clips/: example_timeline.json  timeline_hwei_google_gemini25.json
data/processing/: cleaned_transcript.json  cliffhanger_candidates.json  emotions.json  hook_candidates.json  life_lessons.json  narrative_trailer.json  narrative_trailer.otio  narrative_trailer_test.ipynb
data/timelines/: example_timeline.otio  github_example.otio  github_example_1.otio  github_example_scratch.otio  per_media_tracks.otio  per_media_tracks_gpt_5_mini.otio  timeline_claude.otio  timeline_elevenlabs_gpt51.otio  timeline_gpt.otio  timeline_hwei_google_gemini25.otio
data/transcripts/: 002-hwei-only-audio-pre-processing_eng.json  002-hwei-only-audio-pre-processing_eng.srt  002-hwei-only-audio-pre-processing_eng.txt  YT-002-hwei-recording-audio_eng.txt  youtube-subtitles-example.srt
models/: data_models.py
scripts/ai_workflows/: 0.1-example-orchestrator.py  1-long-short.py  (+2 more)
utils/: genai.py
(+5 files in other folders)
