[project]
name = "automate-timelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.54.0",
    "ipykernel>=7.1.0",
    "openai>=2.9.0",
    "opentimelineio>=0.18.1",
    "pathlib>=1.0.1",
    "requests>=2.32.5",
]
